force-app/main/default/objects/GooglAnalyticsConfig__c/GooglAnalyticsConfig__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Google Analytics Config</label>
</CustomObject>