force-app/main/default/objects/GooglAnalyticsConfig__c/fields/Auth_End_Point__c.field-meta.xml
<CustomField>
    <fullName>Auth_End_Point__c</fullName>
    <label>Auth End Point</label>
    <length>255</length>
    <type>Text</type>
</CustomField>