force-app/main/default/objects/GooglAnalyticsConfig__c/fields/FirstTimeAccess__c.field-meta.xml
<CustomField>
    <fullName>FirstTimeAccess__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FirstTimeAccess</label>
    <type>Checkbox</type>
</CustomField>