force-app/main/default/objects/GooglAnalyticsConfig__c/fields/Google_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Google_User_Id__c</fullName>
    <label>Google User Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>