force-app/main/default/objects/GooglAnalyticsConfig__c/fields/Redirect_Uri__c.field-meta.xml
<CustomField>
    <fullName>Redirect_Uri__c</fullName>
    <label>Redirect Uri</label>
    <length>255</length>
    <type>Text</type>
</CustomField>