force-app/main/default/objects/GooglAnalyticsConfig__c/fields/Token_End_Point__c.field-meta.xml
<CustomField>
    <fullName>Token_End_Point__c</fullName>
    <label>Token End Point</label>
    <length>255</length>
    <type>Text</type>
</CustomField>